# grpc-robot-server-and-client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: pipeline.yml
definitions/: robot_status.proto
grpc_client/: build_protos.py  client_dashboard.py  pyproject.toml  requirements.txt  robot_status_pb2.py  robot_status_pb2_grpc.py
grpc_server/: CMakeLists.txt  README
grpc_server/src/: main.cpp
grpc_server/src/grpc_services/: RobotControlService.cpp  RobotControlService.hpp  TelemetryService.cpp  TelemetryService.hpp
grpc_server/src/robot_control/: RobotControlInterface.cpp  RobotControlInterface.hpp  RobotController.cpp  RobotController.hpp
proto_definitions/: robot_control_api.proto
src/: main.cpp
src/grpc_services/: TelemetryService.cpp  TelemetryService.hpp
