[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-robot-client"
version = "0.1.0"
dependencies = [
    "grpcio>=1.50.0",
    "protobuf>=4.21.0",
]

# Explicitly discover only the generated package folder
[tool.setuptools.packages.find]
where = ["."]
include = ["generated*"]